fix: update spacing

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -4,6 +4,10 @@
   justify-content: space-between;
   gap: 3rem;
 
+  .children {
+    margin: 0 auto;
+  }
+
   @include respond(tablet) {
     display: block;
   }
