--- a/src/components/Aside/Aside.module.scss
+++ b/src/components/Aside/Aside.module.scss
@@ -10,7 +10,7 @@ $offset: 3rem;
   min-width: 250px;
   max-width: 300px;
   height: 100vh;
-  padding: 6rem 0 5rem 0;
+  padding: 5rem 0;
 
   @include respond(tablet) {
     position: static;
