--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,6 +1,6 @@
 .Container {
   width: 100%;
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 5rem;
 
