--- a/src/components/_scopes/form/ContactForm/ContactForm.module.scss
+++ b/src/components/_scopes/form/ContactForm/ContactForm.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   gap: 2rem;
   margin-top: 2rem;
-  margin-bottom: 4rem;
   padding-left: $padding-3;
 
   .row {
