--- a/src/components/_scopes/section/SectionUptitle/SectionUpTitle.module.scss
+++ b/src/components/_scopes/section/SectionUptitle/SectionUpTitle.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   gap: 0.5rem;
   width: fit-content;
-  margin: 1rem 0 4rem 0;
+  margin: 1rem 0 3rem 0;
   padding: 6px 1rem;
   border: $border-s;
   border-color: var(--primary-100);
