--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -68,11 +68,6 @@ h6 {
   font-family: var(--font-heading);
 }
 
-p,
-b {
-  max-width: 600px;
-}
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
